...
    static let managementPages: [NavigationOption] = [.documents, .notes]
    
    var id: String { rawValue }
    
    var name: LocalizedStringResource {
        switch self {
        case .jobs: "Jobs"
        case .stats: "Statistics"
        case .documents: "Documents"
        case .notes: "Notes"
        }
    }
    
    var symbolName: String {
        switch self {
        case .jobs: "briefcase"
...
